# DDC

./: .gdbinit  .gitignore  BST.cpp  Makefile  README.org  SO.v  _CoqProject  car.cpp  declarative_debugger.py  default.nix  demo  demo.py  fibonacci.cpp  flake.nix  functions.py  generate_plot_data.sh  multithreading.cpp  nagini.py  non_terminating_quicksort.cpp  odd_parity.cpp  palindrome.cpp  palindrome.py  proofs.v  pyproject.toml  quicksort.cpp  quicksort.h  quicksort_array.cpp  quicksort_benchmarks.cpp  quicksort_wrong_bt.cpp  replay_automation  sandbox.v  script.py  setup-db.sh  test_cases_as_oracle.cpp  test_quicksort.cpp  tests_demo.py  tree.org  vector_function.cpp
db/: schema.sql
db/migrations/: 20220522161939_nodes.sql  20220523165858_arguments_on_entry.sql  20220523165910_global_variables_on_entry.sql  20220523165927_arguments_when_returning.sql  20220523165938_global_variables_when_returning.sql
examples/: car.cpp  non_terminating_quicksort.h  quicksort.h
mysql/db/: schema.sql
mysql/db/migrations/: 20220522161939_nodes.sql  20220523165858_arguments_on_entry.sql  20220523165910_global_variables_on_entry.sql  20220523165927_arguments_when_returning.sql  20220523165938_global_variables_when_returning.sql  20220530104328_bechmarks.sql
proofs/: ALEA.v  nagini.py  sandbox.v
scripts/: BST.py  class_demo.py  debug_tests_script.py  demo  demo.py  gdb_script  palindrome.py  tests_demo.py
