[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Sébastien Eustace <sebastien@eustace.io>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
simple-term-menu = "^1.4.0"
networkx = "^2.6.3"
rich = "^10.16.1"
setuptools-scm = "^6.3.2"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"