[tool.poetry]
name = "declarative-debugger-for-cpp"
version = "0.1.0"
description = ""
authors = ["Roland Coeurjoly <rolandcoeurjoly@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
simple-term-menu = "^1.4.0"
networkx = "^2.6.3"
rich = "^10.16.1"
setuptools-scm = "^6.3.2"
packaging = "^21.3"
tomli = "^2.0.0"
crosshair-tool = "^0.0.20"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"